Bug 111102 - lp_bld_misc.cpp:834:156: error: no matching function for call to ‘llvm::IRBuilder<>::CreateAtomicCmpXchg(llvm::Value*, llvm::Value*, llvm::Value*, llvm::AtomicOrdering, llvm::SynchronizationScope)’
Summary: lp_bld_misc.cpp:834:156: error: no matching function for call to ‘llvm::IRBui...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2019-07-10 18:39 UTC by Vinson Lee
Modified: 2019-08-02 18:17 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2019-07-10 18:39:36 UTC
Build error with llvm-3.8.

  Compiling src/gallium/auxiliary/gallivm/lp_bld_misc.cpp ...
src/gallium/auxiliary/gallivm/lp_bld_misc.cpp: In function ‘LLVMOpaqueValue* LLVMBuildAtomicCmpXchg(LLVMBuilderRef, LLVMValueRef, LLVMValueRef, LLVMValueRef, LLVMAtomicOrdering, LLVMAtomicOrdering, LLVMBool)’:
src/gallium/auxiliary/gallivm/lp_bld_misc.cpp:834:156: error: no matching function for call to ‘llvm::IRBuilder<>::CreateAtomicCmpXchg(llvm::Value*, llvm::Value*, llvm::Value*, llvm::AtomicOrdering, llvm::SynchronizationScope)’
                                                           SingleThread ? llvm::SynchronizationScope::SingleThread : llvm::SynchronizationScope::CrossThread));
                                                                                                                                                            ^


2a55acbc1de0b8d1901988ee4f17d5697519c2d2 is the first bad commit
commit 2a55acbc1de0b8d1901988ee4f17d5697519c2d2
Author: Dave Airlie <airlied@redhat.com>
Date:   Tue Jul 2 07:10:53 2019 +1000

    gallivm: add compare exchange wrapper
    
    This just pulls the wrapper from LLVM for older versions
    
    Reviewed-by: Roland Scheidegger <sroland@vmware.com>

:040000 040000 cee7aedaa0ddff70fc6ab1b45205ed5d9d7bf771 4aa821efcbb5ee85301518e72b79afb636a1fd0f M	src
bisect run success
Comment 1 Roland Scheidegger 2019-08-02 18:17:09 UTC
Should be fixed by 74baeacafc7c2e9bae0f4db9651b0c664d33f5ac.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.